add some notifications